cmake_minimum_required(VERSION 3.8)
project (boilerplate)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

function(add_target TARGET SOURCES)
  foreach(FILE ${SOURCES})
    list(APPEND SOURCES_PREPEND Source/${TARGET}/${FILE})
  endforeach()
  add_executable(${TARGET} ${SOURCES_PREPEND})
  target_include_directories(${TARGET} PUBLIC src/${TARGET})
endfunction()

add_target(bw_11 "Main.cpp")
add_target(bw_12 "Main.cpp")
add_target(bw_14 "Main.cpp")
add_target(bw_15 "Main.cpp;NumWord.cpp")
add_target(bw_22 "main.cpp;strc.cpp;utils.cpp")
add_target(dd_00_xval "main.cpp")
add_target(kk_17 "Main.cpp")
add_target(kk_19 "Main.cpp")
add_target(kk_21 "Main.cpp;Image.cpp")
add_target(kk_21b "Main.cpp")

